# server/routes/orderRouter.js
@@ -5,6 +5,8 @@ import getActiveOrdersController from '../controllers/orderControllers/getActive
 import updateOrderController from '../controllers/orderControllers/updateOrder.controller.js';
 import completeOrderController from '../controllers/orderControllers/completeOrder.controller.js';
 import getCompletedOrdersController from '../controllers/orderControllers/getCompletedOrders.controller.js';
+import deleteOrderController from '../controllers/orderControllers/deleteOrder.controller.js';
+import updateOrderStatusController from '../controllers/orderControllers/updateOrderStatus.controller.js';
 
 const router = Router();
 
@@ -13,5 +15,7 @@ router.get('/active', authRequired, getActiveOrdersController.getActiveOrders);
 router.get('/completed', authRequired, getCompletedOrdersController.getCompletedOrders);
 router.patch('/update', authRequired, updateOrderController.updateOrder);
 router.patch('/complete', authRequired, completeOrderController.completeOrder);
+router.patch('/update-status', authRequired, updateOrderStatusController.updateOrderStatus);
+router.delete('/delete/:id', authRequired, deleteOrderController.deleteOrder);
 
 export default router;
